...
          }}>
          <Text style={{color: 'red', marginVertical: 8, marginHorizontal: 24}}>
            Home Screen
          </Text>
        </TouchableOpacity>
      </View>
      <View testID="button_navigate_login">
        <TouchableOpacity
          testID="press_to_login"
          accessibilityLabel="press_to_login"
          style={{borderWidth: 1, marginBottom: 12}}
          onPress={() => {
            navigate('login');
          }}>
          <Text style={{color: 'red', marginVertical: 8, marginHorizontal: 24}}>
...
